# game-workflow

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  implementation-plan.md  migration-plan.md  mypy.ini  notes.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: configuration.md  mcp-servers.md  setup.md  skills.md
scripts/: setup-butler.sh  setup-slack-app.sh
skills/game-testing/: SKILL.md
skills/godot-game/: SKILL.md
skills/phaser-game/: SKILL.md
src/game_workflow/: __init__.py  config.py  main.py
src/game_workflow/agents/: __init__.py  base.py  build.py  design.py  publish.py  qa.py  schemas.py
src/game_workflow/hooks/: __init__.py  checkpoint.py  logging.py  performance.py  slack_approval.py
src/game_workflow/mcp_servers/: __init__.py  registry.py
src/game_workflow/mcp_servers/itchio/: __init__.py  api.py  butler.py  server.py
src/game_workflow/orchestrator/: __init__.py  exceptions.py  state.py  workflow.py
src/game_workflow/utils/: __init__.py  agent_sdk.py  subprocess.py  templates.py  validation.py
templates/: concept-template.md  gdd-template.md  itchio-page.md
templates/scaffolds/godot/: .gitkeep  README.md  project.godot
templates/scaffolds/godot/scenes/: main.tscn
templates/scaffolds/godot/scenes/entities/: player.tscn
templates/scaffolds/godot/scenes/ui/: game_over.tscn  hud.tscn  main_menu.tscn  pause_menu.tscn
templates/scaffolds/godot/scripts/: main.gd
templates/scaffolds/phaser/: .gitkeep  README.md  index.html  package.json
templates/scaffolds/phaser/src/: main.js
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_full_workflow.py
tests/integration/: __init__.py  test_approval_flows.py  test_error_scenarios.py  test_external_services.py  test_slack_integration.py  test_workflow.py
tests/unit/: __init__.py  test_agents.py  test_build_agent.py  test_config.py  test_design_agent.py  test_mcp_servers.py  test_orchestrator.py  test_performance.py  test_publish_agent.py  test_qa_agent.py  test_security.py
(+12 files in other folders)
