[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-workflow"
version = "0.1.0"
description = "Fully automated game creation pipeline using Anthropic's Agent SDK, Claude Code, and MCP integrations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Game Workflow Contributors" }
]
keywords = ["game", "automation", "claude", "ai", "agent", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomli>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
qa = [
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

[project.scripts]
game-workflow = "game_workflow.main:app"

[project.urls]
Homepage = "https://github.com/PSthelyBlog/game-workflow"
Documentation = "https://github.com/PSthelyBlog/game-workflow#readme"
Repository = "https://github.com/PSthelyBlog/game-workflow"
Issues = "https://github.com/PSthelyBlog/game-workflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/game_workflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/game_workflow"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
